# projecthub

./: .env.example  .gitignore  celerybeat-schedule.db  manage.py  pyproject.toml  todo.md
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
projecthub/: conftest.py
projecthub/api/urls/: v1.py
projecthub/attachments/: apps.py  models.py
projecthub/attachments/api/: serializers.py  views.py
projecthub/attachments/migrations/: 0001_initial.py  0002_alter_commentattachment_options_and_more.py  0003_remove_taskattachment_task_and_more.py
projecthub/attachments/tests/: factories.py
projecthub/comments/: admin.py  apps.py  models.py
projecthub/comments/migrations/: 0001_initial.py
projecthub/comments/tests/: factories.py  test_models.py
projecthub/core/: admin.py  apps.py  filters.py  middleware.py  tasks.py  utils.py
projecthub/core/api/: permissions.py  policies.py
projecthub/core/migrations/: 0001_initial.py  0002_tenant_owner_alter_tenantmembership_role.py  0003_tenant_unique_tenant_name_for_owner.py  0004_alter_tenant_sub_domain.py
projecthub/permissions/: __init__.py  base.py  comment_roles.py  project_roles.py  task_roles.py  tenant_roles.py  user_roles.py  utils.py
projecthub/policies/: __init__.py  base.py  project_roles.py  task_roles.py  tenant_roles.py
projecthub/projects/: admin.py  apps.py  models.py  tasks.py  test_tasks.py  utils.py
projecthub/tasks/: admin.py  apps.py  models.py  services.py  tasks.py  utils.py
projecthub/users/: admin.py  apps.py
(+107 files in other folders)
